# simpleGame

./: .gitignore  CMakeLists.txt
include/: Game_Objects.hpp  SDL_Objects.hpp  Utils.hpp
include/Game/: Game.hpp  Game_Constants.hpp  Game_Mode.hpp  Game_Mode_Manager.hpp  Game_Object.hpp  Game_Objects_Manager.hpp
include/SDL_Objects/: SDL_Objects.hpp
include/Utils/: Utils.hpp
src/: CMakeLists.txt  main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game_Mode.cpp  Game_Mode_Manager.cpp  Game_Object.cpp  Game_Objects_Manager.cpp
src/Game_Objects/: Game.cpp
src/SDL_Objects/: CMakeLists.txt  SDL_Manager.cpp  SDL_Renderer_Wrapper.cpp  SDL_Texture_Wrapper.cpp  SDL_Window_Wrapper.cpp
src/Utils/: AnimationSpriteCounter.cpp  Animation_Sprite_Timer.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/UtilsTest/: AnimationSpriteTimerTest.cpp  CMakeLists.txt
